# curly-memory

./: .env.dist  GITHUB_MODELS.md  LICENSE  README.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup_docs.py
.github/workflows/: ci.yml  docs.yml
_modules/: index.html
_modules/services/: board_service.html  issue_service.html  jira_analyzer.html  sprint_service.html
api/: services.html
docs/: conf.py  index.rst  installation.rst
docs/api/: clients.rst  core.rst  models.rst  services.rst
scripts/: generate_docs.py
src/: main.py
src/clients/: github.py  github_params.py  jira.py  jira_client.py
src/core/: constants.py  enums.py  logger.py
src/examples/: github_usage_examples.py
src/services/: __init__.py  board_service.py  issue_service.py  jira_analyzer.py  sprint_service.py
src/services/github/models/: __init__.py  base.py  commit.py  contributor.py  issue.py  pull_request.py  release.py  repository.py
src/services/jira/: board_service.py  issue_service.py  jira_analyzer.py  sprint_service.py
src/services/jira/extensions/: changelog.py  jira_extended.py
src/services/jira/models/: __init__.py  avatar.py  board.py  content.py  hierarchy.py  issue.py  metadata.py  project.py  restrictions.py  sprint.py  status.py  tracking.py  user.py
src/tests/: __init__.py  test_github_client.py
