[tool.poetry]
name = "curly-memory"
version = "0.1.0"
description = "Jira scripts for automating Performance review metrics @Arbisoft"
authors = ["Abubakar Siddique <abubakar.siddique@arbisoft.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [
    { include = "clients", from = "src" },
    { include = "core", from = "src" },
    { include = "services", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.13"
jira = ">=3.8.0,<4.0.0"
argparse = ">=1.4.0,<2.0.0"
requests = ">=2.32.4,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
sphinx = ">=8.2.3,<9.0.0"
autodoc = ">=0.5.0,<0.6.0"
pydantic = ">=2.11.7,<3.0.0"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"
sphinx = ">=7.0.0"
sphinx-rtd-theme = ">=1.3.0"
sphinx-autodoc-typehints = ">=1.24.0"
myst-parser = ">=2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.sphinx]
project = "Curly Memory"
version = "0.1.0"
release = "0.1.0"
html_theme = "sphinx_rtd_theme"

[tool.sphinx.autodoc_default_options]
members = true
member-order = "bysource"
special-members = "__init__"
undoc-members = true
exclude-members = "__weakref__"